--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         username: ${{ secrets.SERVER_USERNAME }}
         key: ${{ secrets.USER_KEY }}
         source: "./publish/*"
-        dest: "~"
+        target: "~
 
     - name: Restart Server Service
       uses: appleboy/ssh-action@master
